--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </ul>
             </nav>
             <ul class="social-icons">
-                <li><a href="#"><i class="fa fa-home" title="Homepage"></i></a></li>
+                <li><a href="https://umar-baloran.github.io/portfolio/"><i class="fa fa-home" title="Homepage"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/umar-baloran" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="https://www.github.com/umar-baloran" target="_blank" title="GitHub"><i class="fa fa-git" target="_blank"></i></a></li>
             </ul>
