--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="info">
                         <div>
                           <h1>Hello, My name is <em>Umar</em> and
-                          I'm a <em>web <br>developer</em> currently living in <em>Karachi</em>, Pakistan.</h1>
+                          I'm a <em>web <br>developer</em> and <em> Data Analyst</em>currently living in <em>Karachi</em>, Pakistan.</h1>
                           <div class="white-button button">
                               <a href="https://www.linkedin.com/in/umar-baloran" target="_blank">Get In Touch</a>
                           </div>
